--- a/demo/src/main/res/layout/main.xml
+++ b/demo/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 
-	<com.antonyt.infiniteviewpager.InfiniteViewPager
+	<ws.temp.infiniteviewpager.InfiniteViewPager
 		android:id="@+id/pager"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent" />
